force-app/main/default/objects/Archived_Attachment__x/Archived_Attachment__x.object-meta.xml
<CustomObject>
    <description>Attachment</description>
    <externalDataSource>Privacy_Center_Archival</externalDataSource>
    <externalName>attachment</externalName>
    <label>Archived Attachment</label>
    <pluralLabel>Archived Attachments</pluralLabel>
</CustomObject>