force-app/main/default/objects/Archived_Attachment__x/fields/Body_Length__c.field-meta.xml
<CustomField>
    <fullName>Body_Length__c</fullName>
    <externalDeveloperName>bodylength</externalDeveloperName>
    <label>Body Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>