force-app/main/default/objects/Archived_Attachment__x/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <externalDeveloperName>contenttype</externalDeveloperName>
    <label>Content Type</label>
    <length>120</length>
    <type>Text</type>
</CustomField>