force-app/main/default/objects/Archived_Attachment__x/fields/Created_By_ID__c.field-meta.xml
<CustomField>
    <fullName>Created_By_ID__c</fullName>
    <externalDeveloperName>createdbyid</externalDeveloperName>
    <label>Created By ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>