force-app/main/default/objects/Archived_Attachment__x/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <externalDeveloperName>description</externalDeveloperName>
    <label>Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>