force-app/main/default/objects/Archived_Attachment__x/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <externalDeveloperName>name</externalDeveloperName>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>