force-app/main/default/objects/Archived_Attachment__x/fields/Is_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Is_Encrypted__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>isencrypted</externalDeveloperName>
    <label>Is Encrypted</label>
    <type>Checkbox</type>
</CustomField>